src/styles/interactive-video.css
/* ... */
.h5p-interactive-video .h5p-control:not(.h5p-no-tooltip):hover > .h5p-interactive-video-tooltip {
  visibility: visible;
}
.h5p-multi-media-choice-option-list {
  margin-bottom: 0;
  margin-top: 0;
}
.heart-beat:before {
  content: url('../gui/Oval.svg');
  position: absolute !important;
  animation: bloom 1.5s linear infinite;
  opacity: 0;
  z-index: 1;
  width: 151px;
  height: 146px;
  pointer-events: none;
  cursor: pointer;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
}
@keyframes bloom {
  0% {
    transform: scale(0.9);
  }
  50% {
    opacity: 1;
  }
  100% {
    transform: scale(1.5);
  }
}
.h5p-video-info {
  width: 95%;
  bottom: 5%;
  left: 0;
  right: 0;
  position: absolute;
  border: 0;
  background-color: #000;
  padding: 0.5em;
  text-align: center;
  border-radius: 5px;
  margin: 0 auto;
  opacity: .9;
  pointer-events: none;
}

.h5p-play-button {
  background-color: #000;
  border-radius: 50%;
  width:4em;
  height: 4em;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  top: 50%;
  left: 49.7%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.h5p-play-button:before {
  font-family: 'H5Picons';
  content: "\e91e";
  font-size: 2em;
  position: absolute;
  cursor: pointer;
  pointer-events: none;
}

/* Styling override for primary button mixed with secondary buttons that needs to collapse at same container width */
@container (max-width: 400px) {
  .h5p-question-buttons:has(.h5p-theme-secondary-cta.h5p-theme-retry) .h5p-theme-primary-cta.h5p-theme-continue,
  .h5p-question-buttons:has(.h5p-theme-primary-cta.h5p-theme-continue) .h5p-theme-secondary-cta.h5p-theme-retry,
  .h5p-question-buttons:has(.h5p-theme-primary-cta.h5p-theme-continue) .h5p-theme-secondary-cta.h5p-theme-show-results {
    justify-content: center;
    padding: var(--h5p-theme-spacing-xs) var(--h5p-theme-spacing-s);
    text-indent: 0;

    &::before {
      opacity: 1;
      position: unset;
      text-indent: 0;
      transform: translate(0, 0);
    }

    .h5p-theme-label {
      display: none;
    }
  }
  
}

@container interactive_container (max-width: 450px) {
  .h5p-theme .h5p-question-evaluation-container.evaluation-mode {
      grid-template-columns: 1fr;
  }
  .h5p-theme .h5p-question-evaluation-container.evaluation-mode .h5p-question-buttons {
    margin-top: var(--h5p-theme-spacing-s);
    justify-content: center;
  }
}

.h5p-interaction-outer .h5p-theme-primary-cta.h5p-theme-continue {
  height: unset;
  min-width: unset;
}

